<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputTitikActivity">

    <TextView
        android:id="@+id/tvTahun"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:text="@string/title_tahun_data"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/tvUpload"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:text="@string/title_upload_fail"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_input_titik"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="16dp" />

    <Spinner
        android:id="@+id/spinnerTahun"
        android:layout_width="269dp"
        android:layout_height="29dp"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="62dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_file"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="118dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="187dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_proecss"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="231dp" />

</android.support.constraint.ConstraintLayout>